[gd_scene load_steps=20 format=3 uid="uid://bp0b4xkr7nwed"]

[ext_resource type="Script" path="res://sources/minigames/monkeys/monkey.gd" id="1_cvvgu"]
[ext_resource type="Texture2D" uid="uid://d0jobqj4fvrwy" path="res://assets/minigames/monkeys/graphic/monkey_spritesheet.png" id="2_awb1x"]
[ext_resource type="PackedScene" uid="uid://2mwfjg3c68p1" path="res://sources/minigames/monkeys/coconut.tscn" id="3_tws3c"]
[ext_resource type="Texture2D" uid="uid://bh28uja7gs8u4" path="res://assets/minigames/monkeys/graphic/coconut.png" id="4_8r7im"]
[ext_resource type="FontFile" uid="uid://b2l4jfylc1v41" path="res://assets/fonts/DidactGothic-Regular.ttf" id="5_4f7ge"]

[sub_resource type="Animation" id="Animation_y7l2o"]
resource_name = "idle"
length = 0.857157
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.285714, 0.428571, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-124, -99), Vector2(-121, -79), Vector2(-121, -79), Vector2(-124, -99)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.285714, 0.428571, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0837758, -0.0837758, 0.0]
}

[sub_resource type="Animation" id="Animation_64f28"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-124, -99)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.48787e-16]
}

[sub_resource type="Animation" id="Animation_vwrnb"]
resource_name = "talk"
length = 0.428586
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.428571),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0628319]
}

[sub_resource type="Animation" id="Animation_cp6hn"]
resource_name = "throw"
length = 0.625013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.625),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.349066, -0.174533]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.625),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-124, -99), Vector2(-72, -144), Vector2(-192, -180)]
}

[sub_resource type="Animation" id="Animation_fm776"]
resource_name = "hit"
length = 0.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.261799, -0.10472]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-74, -151), Vector2(-121, -61)]
}

[sub_resource type="Animation" id="Animation_ol2dg"]
resource_name = "stunned"
length = 0.857157
loop_mode = 1
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-121, -61)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.10472]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_c3yrh"]
resource_name = "idle_blink"
length = 0.857157
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.285714, 0.428571, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-124, -99), Vector2(-121, -79), Vector2(-121, -79), Vector2(-124, -99)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.285714, 0.428571, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0837758, -0.0837758, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rnatx"]
_data = {
"RESET": SubResource("Animation_64f28"),
"hit": SubResource("Animation_fm776"),
"idle": SubResource("Animation_y7l2o"),
"idle_blink": SubResource("Animation_c3yrh"),
"stunned": SubResource("Animation_ol2dg"),
"talk": SubResource("Animation_vwrnb"),
"throw": SubResource("Animation_cp6hn")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cbnv3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o7lt8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ma8s2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i3dnl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d4bmj"]

[sub_resource type="GDScript" id="GDScript_fxkfh"]
script/source = "extends Button

signal dragging()

@onready var drag_preview_model: = $DragPreview


		
"

[node name="Monkey" type="Node2D"]
script = ExtResource("1_cvvgu")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_awb1x")
offset = Vector2(2.08165e-12, -54)
hframes = 6
vframes = 9
frame = 18

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-124, -99)
gizmo_extents = 20.0

[node name="Coconut" parent="Marker2D" instance=ExtResource("3_tws3c")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_rnatx")
}

[node name="Button" type="Button" parent="."]
offset_left = -182.0
offset_top = -220.0
offset_right = 81.0
offset_bottom = 1.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_cbnv3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_o7lt8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ma8s2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_i3dnl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d4bmj")
script = SubResource("GDScript_fxkfh")

[node name="DragPreview" type="TextureRect" parent="Button"]
visible = false
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("4_8r7im")

[node name="Label" type="Label" parent="Button/DragPreview"]
custom_minimum_size = Vector2(110, 2.08165e-12)
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 117.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource("5_4f7ge")
theme_override_font_sizes/font_size = 70
text = "ent"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="dragging" from="Button" to="." method="_on_button_dragging"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="tree_exiting" from="Button/DragPreview" to="." method="_on_drag_preview_tree_exiting"]
